--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^5.0.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.1",
+        "@material-tailwind/react": "^2.1.8",
         "daisyui": "^4.6.1"
     }
 }
